<resources>
    <string name="app_name">AppMovilAgenda</string>
    <string name="agregar_tarea">Agregar tarea</string>
    <string name="logo_menu_desc">Logotipo del menú</string>

    <!-- Pantalla de creación -->
    <string name="agrega_tu_tarea">Agrega tu tarea</string>
    <string name="agregar">Agregar</string>
    <string name="nueva_tarea">Nueva tarea</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="hint_titulo">Título</string>
    <string name="hint_descripcion">Descripción</string>
    <string name="hint_fecha">Fecha (ej: 18-11-2025)</string>
    <string name="hint_hora">Hora (ej: 10:00)</string>
</resources>